# Hercule

./: .dockerignore  Dockerfile  README.md  container  requirements.txt  setup.py
app/: crawl_anaconda.py
app/analysis/: bandit.py  meta-data.py
app/core/: analysis.py  args.py  compute.py  configuration.py  decompile.py  definitions.py  emitter.py  extract.py  logger.py  main.py  oracle.py  reader.py  transform.py  utilities.py  values.py
app/crawler/: crawl_anaconda.py  download_anaconda.py
app/notification/: discord.py  email.py  notification.py
app/tools/: archives.py  bandit.py  codeql.py  depclosure.py  lastpymile.py
app/ui/: messages.py  ui.py
attacks/: setup_outside_package.py
attacks/divide_hide_poc/: construct.py
codeql/: codeql-pack.lock.yml  qlpack.yml  todo.txt
codeql/div-n-hide/: sys.ql
codeql/flows/: DomainConcat.ql  DomainFlowConst.ql  DomainFlowName.ql  IPAddressFlow.ql  ProcessWithShell.ql  SystemCommandExecution.ql  base64Reference.ql  base64stringRead.ql  browserCookie.ql  builtins.ql  dunderRead.ql  environment.ql  eval.ql  fileOverwrite.ql  getPass.ql  httpx.ql  importClosure.ql  marshalFlow.ql  netifaces.ql  osCalls.ql  osFlow.ql  pureEval.ql  pyarmor.ql  selenium.ql  sys.ql  (+4 more)
data/: identified.json  knife.json  maloss.json  malregistry.json  new.json  ossf.json
docs/: Examples.md  GetStarted.md  Manual.md
gumtree-modified/: build.gradle
new_attacks/: design.ipynb
new_attacks/data_hijacking/tokenizer/add_tokens/single_meson/: data.txt  meson.build
pythonparser-modified/: pythonparser
scripts/: collect_pypi_samples.py
(+302 files in other folders)
